last login fixes